--- a/newspack-theme/sass/style-editor-base.scss
+++ b/newspack-theme/sass/style-editor-base.scss
@@ -446,7 +446,7 @@ div[data-align='full'] {
 /** === Blockquote === */
 
 .wp-block-quote {
-	&:not(.is-large, .is-style-large) {
+	&:not( .is-large ):not( .is-style-large ) {
 		border-width: 2px;
 		border-color: colors.$color__link;
 	}
@@ -729,7 +729,7 @@ div[data-align='full'] {
 		border-top: 1px solid colors.$color__border;
 	}
 
-	&:not(.is-style-wide, .is-style-dots) {
+	&:not( .is-style-wide ):not( .is-style-dots ) {
 		max-width: #{5 * structure.$size__spacing-unit};
 		margin-left: auto;
 		margin-right: auto;
